fixed icecream info being shifted to bottom on safari

--- a/src/components/Icecream/Icecream.scss
+++ b/src/components/Icecream/Icecream.scss
@@ -3,6 +3,7 @@
   column-gap: 0.35rem;
 
   .icecream-block {
+    position: relative;
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
